<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f6e5cc">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/scoreLabel"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/gasLimitLabel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/gasLimitLabel"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </LinearLayout>



    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/back"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/startLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/startLabel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/car"
            android:layout_width="66dp"
            android:layout_height="118dp"
            android:layout_gravity="bottom"
            android:src="@drawable/car" />

        <ImageView
            android:id="@+id/gas"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:src="@drawable/gas"/>

        <ImageView
            android:id="@+id/enemy"
            android:layout_width="96dp"
            android:layout_height="107dp"
            android:src="@drawable/enemy" />

        <ImageView
            android:id="@+id/puddle"
            android:layout_width="64dp"
            android:layout_height="54dp"
            android:src="@drawable/puddle" />

    </FrameLayout>

</LinearLayout>